# uetldemo_rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRODUCTION_CHECKLIST.md  PROJECT_SETUP_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_NOTES.md  STRUCTURE.md  mcp-setup.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.json  run.sh  stop.sh
.claude/: config  settings.local.json
.claude/commands/: execute.md  execute_2.md  execute_3.md  implement-tasks-22-35.md
.github/workflows/: cd-prod.yml  cd-staging.yml  ci.yml
.serena/: project.yml
backend/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  app.py  db.py  main.py  models.py  nixpacks.toml  rag.py  requirements.txt  seed.py  start.sh
backend/agents/: __init__.py  actions.py  analytics.py  base.py  orchestrator.py  regulatory.py  strategy.py
backend/alembic/: env.py
backend/alembic/versions/: 20241217_000001_001_initial_schema.py  add_user_auth_fields.py
backend/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/prompts/: __init__.py  builder.py  templates.py
backend/routers/: __init__.py  admin.py  auth.py  chat.py  chat_stream.py  health.py  ingest.py
backend/routers/v1/: __init__.py  chat.py  documents.py  health.py  sessions.py
backend/services/: auth.py  chunking.py  citations.py  document_ops.py  embeddings.py  health.py  ingestion_jobs.py  llm.py  llm_stream.py  qdrant.py  retry.py  scheduler.py  tenant.py
data/: README.md
docs/: AGENTS.md  API.md  DEGRADED_MODE.md  DEPLOYMENT.md  DESIGN_QUICK_REFERENCE.md  DESIGN_SYSTEM.md  ENTERPRISE_ROADMAP.md  EVALUATION.md  FIGMA_BLUEPRINT.md  OPS_NOTES.md  PROMPTING.md  STREAMING.md
docs/api/: README.md
docs/architecture/: README.md
docs/design/: README.md  color-palette-skill.md  figma-blueprint.md
eval/: __init__.py  dataset.py  golden_dataset.json  metrics.py  runner.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/analytics/: page.tsx
frontend/app/admin/dashboard/: page.tsx
frontend/app/admin/documents/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/app/admin/sessions/: page.tsx
frontend/app/admin/users/: page.tsx
frontend/components/: AdminLayout.tsx  InsightsPanel.tsx  Sidebar.tsx  StatusBanner.tsx  Topbar.tsx
frontend/components/admin/: MessageViewer.tsx
frontend/components/analytics/: AnalyticsCard.tsx
frontend/components/chat/: ChatBubble.tsx  ChatInput.tsx
frontend/components/providers/: ThemeScript.tsx
frontend/components/ui/: MeshBackground.tsx  ThemeToggle.tsx  dropdown-menu.tsx  scroll-area.tsx
frontend/frontend/: package-lock.json  package.json
frontend/lib/: admin-auth.tsx  api.ts  auth.tsx  server-config.ts
frontend/lib/hooks/: index.ts  useServiceHealth.ts  useStreamingChat.ts
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
loadtest/: README.md  chat.js  health.js
playwright-report/: index.html
scripts/: crawl_uetcl.sh
testdata/: era_pdfs.txt
tests/: copilot.spec.ts
tests/visual/: visual.spec.ts
(+19 files in other folders)
