# SISUiQ Python Project Configuration
# Tool configurations for ruff, mypy, pytest, etc.

[project]
name = "sisuiq"
version = "0.1.0"
description = "UETCL Strategy & Regulatory Copilot"
requires-python = ">=3.11"

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 100
target-version = "py311"

# Include backend directory
include = ["backend/**/*.py"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    "alembic/versions/*.py",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "B008",   # Function call in default argument (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"backend/alembic/**/*.py" = ["ALL"]
"backend/tests/**/*.py" = ["ARG", "PLR2004"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# mypy configuration for type checking
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

# Exclude patterns
exclude = [
    "venv",
    ".venv",
    "alembic",
    "__pycache__",
]

[[tool.mypy.overrides]]
module = "backend.alembic.*"
ignore_errors = true

[tool.pytest.ini_options]
# pytest configuration
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

# Async mode for pytest-asyncio
asyncio_mode = "auto"

# Markers
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

# Output settings
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]

# Ignore warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
# Coverage configuration
source = ["backend"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
